# CrewAI-TaskMaster

./: .env.example  .gitignore  CHANGELOG.md  README.md  TaskMaster Agent.md  pyproject.toml  requirements.txt
knowledge/: categories.yaml
knowledge/entries/: agent_ml_kb.json  architecture_kb.json  task_management_kb.json  tools_kb.json
knowledge/indexes/: ml_models_index.txt  performance_index.txt  tools_integrations_index.txt  workflow_index.txt
src/main/: __init__.py  crew.py  main.py
src/main/config/: agents.yaml  mlflow.yaml  tasks.yaml
src/main/tools/: __init__.py  enhanced.py  langchain.py  serper.py  task.py
